--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
 }
 header {
   background-color: #1F2937;
@@ -109,11 +110,9 @@ h3 {
 }
 .quote {
   color: #1F2937;
-  /* font-size: 23px; */
   font-size: 28px;
   font-weight: 300;
   font-style: italic;
-  /* width: 520px; */
   width: 610px;
   margin: 0;
 }
@@ -124,5 +123,49 @@ h3 {
   font-size: 17px;
   font-weight: 600;
   padding-right: 60px;
+  margin: 0;
+}
+.sign-up {
+  flex: 1;
+  display: flex; 
+  justify-content: center;
+  align-items: center;
+  padding: 65px 140px;
+}
+.sign-up-container {
+  background-color: #3882F6;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-grow: 1;
+  padding: 35px 90px;
+}
+.sign-up-msg {
+  color: #F9FAF8;
+  font-size: 17px;
+  margin: 0;
+  line-height: 17px;
+}
+.sign-up-msg span {
+  font-size: 13px;
+  font-weight: 300;
+  color: #cfcfcf;
+}
+.sign-up-btn {
+  background-color: #3882F6;
+  color: #F9FAF8;
+  border: 1px solid #F9FAF8;
+  border-radius: 5px;
+  padding: 5px 25px;
+  white-space: nowrap;
+}
+footer {
+  background-color: #1F2937;
+  padding: 28px;
+  display: flex;
+  justify-content: center;
+}
+footer p {
   margin: 0;
 }
